--- a/composer.json
+++ b/composer.json
@@ -32,11 +32,13 @@
         "symfony/yaml": "5.1.*",
         "ext-dom": "*",
         "ext-libxml": "*",
-        "ext-json": "*"
+        "ext-json": "*",
+        "exercise/htmlpurifier-bundle": "*"
     },
     "require-dev": {
         "symfony/debug-pack": "*",
         "symfony/maker-bundle": "^1.0",
+        "symfony/phpunit-bridge": "^5.1",
         "symfony/profiler-pack": "*",
         "symfony/test-pack": "*"
     },
