--- a/docker/php/Dockerfile
+++ b/docker/php/Dockerfile
@@ -2,6 +2,8 @@ FROM php:7.4-fpm
 
 RUN docker-php-ext-install pdo_mysql
 
+RUN apt update && apt install -y git
+
 RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
 
 WORKDIR /app
